<resources>
    <string name="app_name">Estimation de l\'immobililier </string>
    <string name="text_result">Resultat: %1$s Є</string>
    <string name="text_button">Estimation</string>
    <string name="button_maison">Maison</string>
    <string name="button_appart">Appartement</string>
    <string name="text_to_enter0">Maison ou appartement ?</string>
    <string name="text_to_enter1">Insérez votre surface terrain</string>
    <string name="text_to_enter2">Insérez votre surface réelle du batiment</string>
    <string name="nb_piece">Le nombre de pièces</string>
    <string name="text_final">(Valeur en euros du bien)</string>
    <string name="erreur_saisie">Character %1$s not authorised</string>
    <string name="warning">warning</string>
    <string name="yosh">J\'ai compris</string>
    <string name="surface2">Appartement</string>
    <string name="text_to_enter_shift">Type de local</string>
    <string name="estimation_button_text">Estimation</string>
    <string name="intro">Bienvenue, cette application est un estimateur de la valeur immobilière des biens à Saint Etienne du Rouvray
        réalisée dans le cadre d\'un projet entre Mr.Rio et Mr. Villafuerte Nina pour l\'université de Rouen, les valeurs ne sont pas 100% précise :</string>
    <string name="resultat">Votre résultat en euros</string>
    <string name="logo_de_la_maison">Logo de la maison</string>
    <string name="logo_de_saint_etienne_du_rouvray">logo de Saint Etienne du Rouvray</string>
</resources>